--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -15,7 +15,8 @@
       "rule-2": "2. Перейди в телеграм-бот за вказаним посиланням.",
       "rule-3": "3. Зроби позитивне селфi, як зазначено у прикладi. 🤳",
       "rule-4": "4. Виклади пост у Instagram.",
-      "rule-5": "5. Вкажи свiй телефон та отримай промокод  😎"
+      "rule-5": "5. Вкажи свiй телефон та отримай промокод  😎",
+      "button": "До телеграм-бота"
     },
     "order-payment": {
       "title": "Замовлення та оплата 💵",
