added toastification and other small changes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,7 +40,10 @@
     "text": "We will solve all your questions about windows, leave a request and we will call you back 😉",
     "placeholderName": "Name",
     "placeholderPhone": "Phone",
-    "button": "Send"
+    "button": "Send",
+    "measurement": "Measurement",
+    "сonsultation": "Consultation",
+    "other": "Other"
   },
   "footer": {
     "text": "lorem10123asd as;ldkalksd;lk a;lsdkasdjnsdkbsndc sdhbfjbsdbvjshbd jhsbdjchbjhsbdc"
