--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -40,7 +40,10 @@
     "text": "Ми вирішимо усі ваші питання щодо вікон, залишайте заявку та ми вам передзвонимо 😉",
     "placeholderName": "Імʼя",
     "placeholderPhone": "Телефон",
-    "button": "Відправити"
+    "button": "Відправити",
+    "measurement": "Замір",
+    "сonsultation": "Консультація",
+    "other": "Інше"
   },
   "footer": {
     "text": "lorem10123asd as;ldkalksd;lk a;lsdkasdjnsdkbsndc sdhbfjbsdbvjshbd jhsbdjchbjhsbdc"
