--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -49,6 +49,7 @@
     "text": "lorem10123asd as;ldkalksd;lk a;lsdkasdjnsdkbsndc sdhbfjbsdbvjshbd jhsbdjchbjhsbdc"
   },
   "notifications": {
-    "soonWeWillCall": "За декілька хвилин ми вам зателефонуємо!"
+    "soonWeWillCall": "За декілька хвилин ми вам зателефонуємо!",
+    "warning": "Щось пішло не так, спробуйте зателефонувати нам +38(050)-342-94-60"
   }
 }
