--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -1,7 +1,7 @@
 {
   "intro": {
-    "intro-title-1": "В інтернеті",
-    "intro-title-2": "дешевше"
+    "intro-title-1": "Розрахуй своє вікно",
+    "intro-title-2": "за 4 кроки"
   },
   "about": {
     "about-text":"Ми займаємось вікнами вже понад 30 років і знаємо свою справу. Наша команда фахівців допоможе вам у виборі вікон для вашого будинку та не залишить питань. Робота з нами швидка та ефективна 🔥",
@@ -30,13 +30,14 @@
     }
   },
   "calc": {
-    "title": "Рахуй самостійно 📱",
+    "title": "Починай розрахунок тут ↙️",
     "button": "Шо це за звір? 🦁",
     "modal-title": "Як це працює? 🤔",
     "modal-button": "Зрозумів"
   },
   "form": {
-    "title": "Передзвонити мені 🤙",
+    "title": "Нічо не ясно? 😅",
+    "title2": "передзвоніть мені будь ласка",
     "text": "Ми вирішимо усі ваші питання щодо вікон, залишайте заявку та ми вам передзвонимо 😉",
     "placeholderName": "Імʼя",
     "placeholderPhone": "Телефон",
